# WHT_DispFoldSolver

./: .gitignore  WHT_DispFoldSolver_plan_20260621.md  pyproject.toml
.omo/plans/: abaqus-growth-roadmap.md  abaqus-inp-parser.md  connector-elements.md
.omo/run-continuation/: ses_10b300c22ffeevYYpiIzxk9uz6.json
dev_log/: implementation_plan_20260622.md  implementation_plan_20260623.md  implementation_plan_abaqus_20260623.md  rbe2_element_refactoring.md  task_20260623.md  walkthrough_20260621.md  walkthrough_20260622.md  walkthrough_20260623.md  walkthrough_20260624.md  walkthrough_20260625.md  walkthrough_20260626.md
dispsolver/: __init__.py
dispsolver/constraint/: __init__.py  base.py  contact_jax.py  penalty_hinge.py  rbe2.py  tie.py
dispsolver/contact/: __init__.py  contact_solver.py  contact_surface.py
dispsolver/element/: __init__.py  q4.py  q4_eas.py  q4_eas_jax.py  q4_jax.py  q4_up_jax.py  q4_visco_hybrid.py  rbe2.py  (+4 more)
examples/: _eas_block_verify.py  _eas_fs_verify.py  _eas_verify.py  ex03_display_fold.inp  ex03_display_fold.py  ex03_display_fold.py.bak  ex03_optimized.py  ex03_optimized_v2.py  ex03_optimized_v3.py  ex03_v4_rbe2_element.py  gen_ex03_inp.py
tests/: bench_visco_jax.py  test_amplitude.py  test_contact.py  test_eas_jax_verify.py  test_hybrid.py  test_hyperelastic.py  test_kinematics.py  test_linear_visco_hybrid.py  test_plastic_jax_verify.py  test_plasticity.py  test_rbe2.py  test_rbe2_element.py  test_solver.py  test_static.py  test_tie.py  test_traction.py  test_visco_hybrid_jax_verify.py  test_visco_solver.py  test_viscoelastic.py
(+32 files in other folders)
