[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dispsolver"
version = "0.1.0"
description = "JAX-based 2D Plane Strain Implicit Dynamic FEM Solver for Display Panel Folding"
requires-python = ">=3.12"
dependencies = [
    "jax[cpu]>=0.4.25",
    "numpy>=1.26",
    "scipy>=1.12",
    "meshio>=5.3",
    "h5py>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
vis = ["pyvista>=0.43"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dispsolver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
